2001-07-02  NeilFred Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-version): updated to 2.4 for release.

2001-06-27  NeilFred Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-beep-on-chat-message): added.  may as well separate
	this setting from the one for IMs, because hey, why not.
	(tnt-beep-on-visible-chat-message): added.  ditto.
	(tnt-send-pounce): tnt-push-event was being called with the buffer
	rather than the buffer-name.  fixed.
	(tnt-join-chat): now calls tnt-remove-chat-event.
	(tnt-send-text-as-chat-message): now calls tnt-remove-chat-event.
	(tnt-append-message): added an extra tnt-separator.
	(tnt-remove-im-event): now calling tnt-im-buffer-name, rather than
	doing it itself.
	(tnt-remove-chat-event): added.
	(tnt-handle-chat-in): now calling tnt-remove-chat-event rather
	than the incorrect call to tnt-remove-im-event.  also correctly
	calling tnt-push-event.  and finally, also using the new
	tnt-beep-on-chat-message variables.
	(tnt-handle-chat-invite): now correctly calling tnt-push-event.  

2001-06-25  NeilFred Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-backup-buddy-list): now only saves a backup if the
	current buddy list differs from the backup.  mostly i did this so
	that the "xx:xx:xx Signed on" will remain in the minibuffer, so
	that when an auto-reconnect occurs, i can tell at a glance that
	that's what the beep i heard was.  (this was the reason i added
	the timestamp to that message, but i still had to switch to the
	"*Messages*" buffer to see it.)
	(tnt-handle-closed): a change from (tnt-error) to (error) broke
	auto-reconnect, since (error) halts execution.  the purpose of
	that change was to avoid the beep the tnt-error makes, so i just
	changed it to (message)...

2001-06-25  Scott Evans  <gse@antisleep.com>

	* tnt.el (tnt-mute): Added.  Bound to C-x t m.

2001-06-22  Scott Evans  <gse@antisleep.com>

	* tnt.el misc changes:
	(tnt-auto-reconnect): Added user-configurable variable.	
	(tnt-running-xemacs): Added variable.	
	